--- a/src/main/resources/nemo/networking/nemo-view.fxml
+++ b/src/main/resources/nemo/networking/nemo-view.fxml
@@ -16,7 +16,7 @@
             <HBox fx:id="top_menu">
                 <Button fx:id="top_help" text="help" styleClass="btn"/>
                 <Button fx:id="top_files" text="files" styleClass="btn"/>
-                <Button fx:id="top_new" text="new" styleClass="btn"/>
+                <Button fx:id="top_new" text="new" styleClass="btn" onAction="#top_new_action"/>
                 <Button fx:id="top_computers" text="computers" styleClass="btn" onAction="#top_computer_action"/>
                 <Button fx:id="top_network_device" text="network device" styleClass="btn" onAction="#top_network_device_action" />
                 <Button fx:id="top_network_service" text="network service" onAction="#top_network_service_action" styleClass="btn" />
