Przygotowania do faktycznej topologi w centrum

--- a/src/main/resources/nemo/networking/new_b.fxml
+++ b/src/main/resources/nemo/networking/new_b.fxml
@@ -6,7 +6,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="nemo.networking.New_b_Conntroler"
+            fx:controller="nemo.networking.New_b_Conntroller"
             prefHeight="700.0" prefWidth="900.0" minHeight="700" minWidth="900"
             >
     <left>
